feat: 테스트 데이터 추가용 API 구현 (유저, 가족, 사진, 반응)